# Trabajo-practico-patr-n-saga

./: INSTRUCCIONES.md  Microservicios saga.md  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  start_services.bat  start_services.ps1  start_services.sh
common/: __init__.py
microservices/common/: transaction_helper.py
microservices/ms_catalogo/: __init__.py  app.py
microservices/ms_compras/: __init__.py  app.py
microservices/ms_compras/services/: compras_service.py
microservices/ms_inventario/: __init__.py  app.py  config.py
microservices/ms_inventario/services/: inventario_service.py
microservices/ms_pagos/: __init__.py  app.py  config.py  routes.py
microservices/ms_pagos/services/: pago_service.py
microservices/orchestrator/: __init__.py  app.py  config.py  saga_service.py
ms_catalogo/: app.py  config.py  routes.py
ms_catalogo/services/: catalogo_service.py
ms_compras/: app.py  config.py  routes.py
ms_compras/services/: compras_service.py
ms_inventario/: app.py  config.py  routes.py
ms_inventario/services/: inventario_service.py
ms_pagos/: app.py  routes.py
ms_pagos/services/: pago_service.py
orchestrator/: routes.py
orquestador/: app.py  saga_service.py
